For #6104: disable warnings about illegal reflective access operation